# csci8380

./: README.md
final_project/: .gitignore  .pre-commit-config.yaml  deploy.py  pyproject.toml
final_project/Neo4j_Code/: Neo4j_Example_Code.txt
final_project/pdb_kg/: __init__.py  api.py  data_model.py  download_kg.py  neo4j_starter.py
final_project/pdb_kg/downloader/: .data_model.py.swp  __init__.py  aiohttp_session.py  data_model.py  data_model_db.py  data_model_pdb.py  download_manager.py  download_tasks.py  graph_db.py  neo4j_driver.py  neo4j_starter.py  pdb.txt  temp.py
final_project/pdb_kg/web_app/: __init__.py  main.py  template_engine.py
final_project/pdb_kg/web_app/frontend/: .gitignore  babel.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
final_project/pdb_kg/web_app/frontend/css/: colors.scss  multi_column.scss  multi_row.scss  pdb-kg.scss  tooltips.scss
final_project/pdb_kg/web_app/frontend/src/: api-client.ts  elements.ts  example_data.ts  graph-utils.ts  graph-visualization.ts  graph_utils.ts  index.ts  protein-details.ts  protein-selector.ts  search-results.ts  search-widget.ts
final_project/pdb_kg/web_app/routers/: __init__.py
final_project/pdb_kg/web_app/routers/root/: __init__.py  endpoints.py
final_project/pdb_kg/web_app/routers/root/tests/: __init__.py  test_endpoints.py
final_project/pdb_kg/web_app/templates/: base.html  index.html
project1/: .dockerignore  README.md  deploy.py  docker-compose-dev.yml  docker-compose.yml  pom.xml
project2/: README.md  example_tweets.json  pom.xml  tweets.json
(+38 files in other folders)
