[tool.poetry]
name = "pdb-kg"
version = "0.1"
description = "Knowledge graph of PDB entities with a searchable frontend."
authors = ["Daniel Petti <djpetti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
aiohttp = "^3.7.4"
pydantic = "^1.8.2"
ontobio = "^2.7.12"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
pytest-black = "^0.3.12"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 79
skip = "('.eggs', '.git', '.venv', 'build', 'dist')"

[tool.kedro]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
